fixed styling for non mobile screens

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body{
 	padding:0px 16px;
 }
 
-@media screen and (min-width: 700px)
+@media screen and (min-width: 700px;)
 {
 	/* this rules only apply when the screen is 700px or more*/
 	.nav ul{
@@ -78,7 +78,7 @@ body{
 	}
 
 	.nav ul li{
-		display: inline-block;;
+		display: inline-block;
 		border-left: 1px solid black;
 		border-bottom: 0px;
 		text-align: left;
